# IC-repository

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  injectionarc
basefront/: index.html
db/: v0001__create_people.sql
src/: database.rs  main.rs
